--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<link rel="stylesheet" href="/styles.css">
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 	<h1>Nirmal Kumar's Abode 🫠</h1>
 	<table cellspacing="25px">
 		<tr>
 			<td>
-				<img src="/img1.png" alt="Some random guy">
+				<img src="img1.png" alt="Some random guy">
 			</td>
 			<td>
 				<p>Nirmal Kumar, a <em>BCA student</em> and emerging <strong>tech god.</strong></p>
