--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<h1>Nirmal Kumar's Abode 🫠</h1>
+	<h1>1 Nirmal Kumar's Abode 🫠</h1>
 	<table cellspacing="25px">
 		<tr>
 			<td>
